fix: updated endpoint params.
